[workspace]
members = ["crates/*"]

# TODO(#550): Re-enable sparrow-qfr-tool
exclude = ["crates/sparrow-qfr-tool"]

[workspace.package]
authors = ["Kaskada Developers"]
edition = "2021"
version = "0.2.0"
license = "Apache-2.0"

[workspace.dependencies]
ahash = "0.8.2"
anyhow = { version = "1.0.68", features = ["backtrace"] }
approx = "0.5.1"
arrow = { version = "32.0.0" }
arrow-array = { version = "32.0.0" }
arrow-csv = { version = "32.0.0" }
arrow-json = { version = "32.0.0" }
arrow-schema = { version = "32.0.0", features = ["serde"] }
arrow-select = { version = "32.0.0" }
async-once-cell = "0.3.1"
async-stream = "0.3.3"
async-trait = "0.1.61"
avro-schema = "0.3.0"
aws-config = "0.11.0"
aws-sdk-s3 = "0.11.0"
pulsar = { version = "5.0.2", default-features = false, features = ["async-std-runtime", "tokio-runtime", "lz4"] }
aws-types = "0.11.0"
bigdecimal = "0.3.0"
bincode = "1.3.3"
bit-set = "0.5.3"
bitvec = { version = "1.0.1", features = ["serde"] }
chrono = "0.4.23"
chronoutil = "0.2.3"
clap = { version = "4.1.1", features = ["derive", "env"] }
codespan-reporting = "0.11.1"
const_format = "0.2.30"
cpu-time = "1.0.0"
criterion = { version = "0.4.0", default-features = false, features = [
	"async_tokio",
] }
data-encoding = "2.3.3"
decorum = "0.3.1"
derive_more = "0.99.17"
edit-distance = "2.1.0"
egg = "0.9.2"
enum-map = "2.4.2"
erased-serde = "0.3.24"
error-stack = { version = "0.3.0", features = ["anyhow", "spantrace"] }
fallible-iterator = "0.2.0"
futures = "0.3.25"
half = { version = "2.2.1", features = ["serde"] }
hashbrown = { version = "0.13.2", features = ["serde"] }
hex = "0.4.3"
indoc = "1.0.8"
insta = { version = "1.26.0", features = ["ron", "yaml", "json"] }
inventory = "0.3.3"
itertools = "0.10.5"
lalrpop = "0.19.8"
lalrpop-util = "0.19.8"
logos = "0.12.1"
lz4 = "1.24.0"
lz4-sys = "1.9.4"
num = "0.4.0"
num-traits = "0.2.15"
once_cell = "1.17.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
owning_ref = "0.4.1"
parquet = { version = "32.0.0", features = ["async"] }
parse-display = "0.8.0"
pin-project = "1.0.12"
postcard = { version = "1.0.2", features = ["use-std"] }
prettytable-rs = "0.10.0"
proptest = "1.0.0"
prost = "0.11.6"
prost-build = "0.11.6"
prost-types = "0.11.6"
prost-wkt = "0.4.0"
prost-wkt-build = "0.4.0"
prost-wkt-types = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
sha2 = "0.10.6"
similar = "2.2.1"
similar-asserts = "1.4.2"
smallvec = { version = "1.10.0", features = ["union", "serde"] }
static_assertions = "1.1.0"
static_init = "1.0.3"
strum = "0.24.1"
strum_macros = "0.24.3"
substring = "1.4.5"
tempfile = "3.4.0"
tera = "1.17.1"
termcolor = "1.2.0"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = [
	"fs",
	"rt-multi-thread",
	"macros",
	"sync",
	"time",
	"test-util",
] }
tokio-stream = { version = "0.1.11", features = ["fs"] }
tokio-util = { version = "0.7.4", features = ["io"] }
toml = "0.5.10"
tonic = "0.8.3"
tonic-build = { version = "0.8.4", features = ["prost"] }
tonic-health = "0.8.0"
tonic-reflection = "0.6.0"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.18.0"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = [
	"env-filter",
	"fmt",
	"json",
] }
uuid = { version = "1.2.2", features = ["v4"] }

[workspace.dependencies.rocksdb]
# This disables compression algorithms that cause issues during linking due to
# https://github.com/rust-rocksdb/rust-rocksdb/issues/514
default-features = false
version = "0.19.0"
features = ["lz4"]

[profile.release]
lto = "thin"
debug = 0    # Set this to 1 or 2 to get more useful backtraces from debugger

# Enable max optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = 2
