[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Kaskada Developers"]
edition = "2021"
version = "0.11.0"
license = "Apache-2.0"

[workspace.dependencies]
ahash = "0.8.3"
anyhow = { version = "1.0.70", features = ["backtrace"] }
approx = "0.5.1"
arrow = { version = "47.0.0" }
arrow-arith = { version = "47.0.0" }
arrow-array = { version = "47.0.0" }
arrow-buffer = { version = "47.0.0" }
arrow-cast = { version = "47.0.0" }
arrow-csv = { version = "47.0.0" }
arrow-data = { version = "47.0.0" }
arrow-json = { version = "47.0.0" }
arrow-ord = { version = "47.0.0" }
arrow-schema = { version = "47.0.0", features = ["serde"] }
arrow-select = { version = "47.0.0" }
arrow-string = { version = "47.0.0" }
async-broadcast = "0.5.1"
async-once-cell = "0.5.3"
async-stream = "0.3.4"
async-trait = "0.1.68"
avro-rs = "0.13.0"
avro-schema = "0.3.0"
bigdecimal = { version = "0.4.1", features = ["serde"] }
bincode = "1.3.3"
bit-set = "0.5.3"
bitvec = { version = "1.0.1", features = ["serde"] }
bytes = { version = "1.4.0" }
chrono = "0.4.24"
chronoutil = "0.2.3"
clap = { version = "4.2.0", features = ["derive", "env"] }
codespan-reporting = "0.11.1"
const_format = "0.2.30"
core_affinity = "0.8.0"
cpu-time = "1.0.0"
criterion = { version = "0.5.1", default-features = false, features = [
	"async_tokio",
] }
dashmap = "5.4.0"
data-encoding = "2.3.3"
decorum = "0.3.1"
derive_more = "0.99.17"
edit-distance = "2.1.0"
egg = "0.9.3"
enum-as-inner = "0.6.0"
enum-map = "2.5.0"
erased-serde = "0.3.25"
error-stack = { version = "0.3.1", features = ["anyhow", "spantrace"] }
fallible-iterator = "0.3.0"
futures = "0.3.28"
futures-lite = "1.12.0"
half = { version = "2.2.1", features = ["serde"] }
hashbrown = { version = "0.14.0", features = ["serde"] }
hex = "0.4.3"
index_vec = { version = "0.1.3", features = ["serde"] }
indoc = "1.0.9"
insta = { version = "1.29.0", features = ["ron", "yaml", "json"] }
inventory = "0.3.8"
itertools = "0.11.0"
lalrpop = "0.20.0"
lalrpop-util = "0.20.0"
logos = "0.12.1"
lz4 = "1.24.0"
lz4-sys = "1.9.4"
num = "0.4.0"
num-traits = "0.2.15"
object_store = { version = "0.6.1", features = ["aws", "gcp"] }
once_cell = "1.17.1"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.12.0"
owning_ref = "0.4.1"
parking_lot = { version = "0.12.1" }
parquet = { version = "47.0.0", features = ["async"] }
parse-display = "0.8.0"
pin-project = "1.0.12"
postcard = { version = "1.0.4", features = ["use-std"] }
prettytable-rs = "0.10.0"
proptest = "1.1.0"
prost = "0.11.8"
prost-build = "0.11.8"
prost-types = "0.11.8"
prost-wkt = "0.4.1"
prost-wkt-build = "0.4.1"
prost-wkt-types = "0.4.1"
pulsar = { version = "5.1.0", default-features = false, features = [
	"async-std-runtime",
	"tokio-runtime",
	"lz4",
] }
rand = "0.8.5"
regex = "1.9.3"
reqwest = { version = "0.11.14", features = ["native-tls-vendored"] }
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
serde_yaml = "0.9.19"
sha2 = "0.10.6"
similar = "2.2.1"
similar-asserts = "1.4.2"
smallvec = { version = "1.10.0", features = ["union", "serde"] }
static_assertions = "1.1.0"
static_init = "1.0.3"
strum = "0.25.0"
strum_macros = "0.25.1"
substring = "1.4.5"
tempfile = "3.4.0"
tera = "1.19.0"
termcolor = "1.2.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = [
	"fs",
	"rt-multi-thread",
	"macros",
	"sync",
	"time",
	"test-util",
] }
tokio-stream = { version = "0.1.12", features = ["fs"] }
tokio-util = { version = "0.7.7", features = ["io"] }
toml = "0.7.6"
tonic = "0.9.2"
tonic-build = { version = "0.9.2", features = ["prost"] }
tonic-health = "0.9.2"
tonic-reflection = "0.9.2"
tracing = { version = "0.1.37", features = ["release_max_level_debug"] }
tracing-error = "0.2.0"
tracing-opentelemetry = "0.19.0"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = [
	"env-filter",
	"fmt",
	"json",
] }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde" ] }

[workspace.dependencies.rocksdb]
# This disables compression algorithms that cause issues during linking due to
# https://github.com/rust-rocksdb/rust-rocksdb/issues/514
default-features = false
version = "0.21.0"
features = ["lz4"]

[profile.release]
lto = "thin"
debug = 0    # Set this to 1 or 2 to get more useful backtraces from debugger
codegen-units = 1

# Enable max optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = 2
codegen-units = 1
