[package]
name = "kaskada"
authors = ["Kaskada Developers"]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0-a.1"
description = """
Python library for building and executing temporal queries.
"""

# This needs to be its own workspace.
[workspace]

[dependencies]
arrow = { version = "43.0.0", features = ["pyarrow"] }
derive_more = "0.99.17"
error-stack = { version = "0.3.1", features = ["anyhow", "spantrace"] }
futures = "0.3.27"
itertools = "0.11.0"
pyo3 = {version = "0.19.1", features = ["abi3-py38", "extension-module", "generate-import-lib"]}
pyo3-asyncio = { version = "0.19.0", features = ["tokio-runtime"] }
sparrow-session = { path = "../crates/sparrow-session" }
tokio = { version = "1.27.0", features = ["sync"] }
tracing = "0.1.37"

[lib]
name = "kaskada"
# `cdylib` is necessary to produce a shared library for Python.
# This can't be used by downstream Rust code (eg., as a library).
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1