[package]
name = "sparrow-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
The Protobuf / gRPC API definitions.
"""

[dependencies]
anyhow.workspace = true
arrow.workspace = true
chrono.workspace = true
clap.workspace = true
decorum.workspace = true
derive_more.workspace = true
enum-map.workspace = true
error-stack.workspace = true
itertools.workspace = true
prost.workspace = true
prost-types.workspace = true
prost-wkt.workspace = true
prost-wkt-types.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sparrow-core = { path = "../sparrow-core" }
sparrow-syntax = { path = "../sparrow-syntax" }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
uuid.workspace = true

[build-dependencies]
prost-build.workspace = true
prost-wkt-build.workspace = true
tonic-build.workspace = true

[lib]
# Disable doctests for the API, since we don't write any, and the
# error_details.proto from Google includes comments that would be
# mistaken as doctest.
doctest = false
