[package]
name = "sparrow-arrow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
General purpose functions and structs for working with Arrow.
"""

[features]
default = ["avro"]
avro = ["avro-schema"]

# This crate should not depend on any other Sparrow crates.
[dependencies]
anyhow.workspace = true
arrow.workspace = true
avro-schema = { workspace = true, optional = true }
avro-rs = { workspace = true }
chrono.workspace = true
decorum.workspace = true
derive_more.workspace = true
error-stack.workspace = true
itertools.workspace = true
num.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true

[lib]
doctest = false