[package]
name = "sparrow-arrow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
General purpose functions and structs for working with Arrow.
"""

[features]
default = ["avro"]
avro = ["avro-schema"]
testing = ["proptest"]

# This crate should not depend on any other Sparrow crates.
[dependencies]
ahash.workspace = true
anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
avro-schema = { workspace = true, optional = true }
avro-rs = { workspace = true }
chrono.workspace = true
decorum.workspace = true
derive_more.workspace = true
error-stack.workspace = true
half.workspace = true
itertools.workspace = true
num.workspace = true
proptest = { workspace = true, optional = true }
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
bincode.workspace = true
insta.workspace = true
proptest.workspace = true

[lib]
doctest = false

[package.metadata.cargo-machete]
# Optional package enabled by `testing`
ignored = ["proptest"]