[package]
name = "sparrow-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Compilation backend for Kaskada queries.
"""

[dependencies]
arrow-schema.workspace = true
bitvec.workspace = true
derive_more.workspace = true
egg.workspace = true
error-stack.workspace = true
hashbrown.workspace = true
index_vec.workspace = true
itertools.workspace = true
smallvec.workspace = true
sparrow-arrow = { path = "../sparrow-arrow" }
sparrow-interfaces = { path = "../sparrow-interfaces" }
sparrow-logical = { path = "../sparrow-logical" }
sparrow-physical = { path = "../sparrow-physical" }
uuid.workspace = true
static_init.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
sparrow-expressions = { path = "../sparrow-expressions" }

[lib]
doctest = false
