[package]
name = "sparrow-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Compiler from Fenl syntax to Sparrow execution plans.
"""

[dependencies]
anyhow.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
bit-set.workspace = true
const_format.workspace = true
codespan-reporting.workspace = true
derive_more.workspace = true
edit-distance.workspace = true
egg.workspace = true
error-stack.workspace = true
hashbrown.workspace = true
itertools.workspace = true
lalrpop-util.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
prost.workspace = true
sha2.workspace = true
smallvec.workspace = true
sparrow-api = { path = "../sparrow-api" }
sparrow-arrow = { path = "../sparrow-arrow" }
sparrow-core = { path = "../sparrow-core" }
sparrow-instructions = { path = "../sparrow-instructions" }
sparrow-io = { path = "../sparrow-io" }
sparrow-syntax = { path = "../sparrow-syntax" }
static_init.workspace = true
strum.workspace = true
strum_macros.workspace = true
termcolor.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
clap.workspace = true

[dev-dependencies]
insta.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

[build-dependencies]
lalrpop.workspace = true

[lib]
doctest = false
