[package]
name = "sparrow-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Common components used by most Sparrow crates.
"""

[dependencies]
anyhow.workspace = true
arrow.workspace = true
chrono.workspace = true
decorum.workspace = true
derive_more.workspace = true
error-stack.workspace = true
futures.workspace = true
itertools.workspace = true
num.workspace = true
owning_ref.workspace = true
parquet.workspace = true
serde.workspace = true
static_init.workspace = true
tonic.workspace = true
tracing.workspace = true

[lib]
doctest = false
