[package]
name = "sparrow-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Common components used by most Sparrow crates.
"""

[dependencies]
anyhow.workspace = true
arrow.workspace = true
futures.workspace = true
owning_ref.workspace = true
sparrow-arrow = { path = "../sparrow-arrow" }
static_init.workspace = true
tonic.workspace = true

[lib]
doctest = false
